--- a/CSS-Projects/CSS-Basic Projects/CSS-P1/index.html
+++ b/CSS-Projects/CSS-Basic Projects/CSS-P1/index.html
@@ -17,33 +17,34 @@
         <h4>Cart</h4>
         <i class="ri-shopping-bag-line"></i>
       </div>
-    <div id="center">
-        <h1>Lightly padded, </br>quality jacket in </br>
-            recycler polyster.</h1>
+      <div id="center">
+        <h1>
+          Lightly padded, <br />quality jacket in <br />
+          recycler polyster.
+        </h1>
         <div id="center-in">
           <p>
-            Exclusive brands aspire for the label haute </br>
-            coutre, but the term is technically limited </br>
-             to memebers of the Chambre Syndicale de la Haute
+            Exclusive brands aspire for the label haute <br />
+            coutre, but the term is technically limited <br />
+            to memebers of the Chambre Syndicale de la Haute
           </p>
           <div id="right">
             <div class="elem">
-                <a href="#">Add to cart</a>
-                <i class="ri-arrow-right-up-line"></i>
+              <a href="#">Add to cart</a>
+              <i class="ri-arrow-right-up-line"></i>
             </div>
             <div class="elem">
-                <a href="#">Product Details</a>
-                <i class="ri-arrow-right-up-line"></i>
+              <a href="#">Product Details</a>
+              <i class="ri-arrow-right-up-line"></i>
             </div>
             <div class="elem">
-                <a href="#">Shipping</a>
-                <i class="ri-arrow-right-up-line"></i>
+              <a href="#">Shipping</a>
+              <i class="ri-arrow-right-up-line"></i>
             </div>
           </div>
         </div>
-    </div>
-    <div id="bottom">
-    </div>
+      </div>
+      <div id="bottom"></div>
     </div>
   </body>
 </html>
